--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,13 @@ requires-python = ">=3.12"
 dependencies = [
     "altair>=5.5.0",
     "cytoprofiling",
+    "numpy>=2.2.6",
     "polars>=1.31.0",
     "rich>=14.0.0",
+    "scanpy>=1.11.3",
+    "vl-convert-python>=1.8.0",
+    "pyarrow>=20.0.0",
+
 ]
 
 [project.scripts]
@@ -28,11 +33,7 @@ dev = [
     "llvmlite>=0.44.0",
     "notebook>=7.4.4",
     "numba>=0.61.2",
-    "numpy==2.2.6",
-    "pyarrow>=20.0.0",
     "ruff>=0.12.0",
-    "scanpy>=1.11.3",
-    "vega-datasets>=0.9.0",
 ]
 
 [tool.uv.sources]
