--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "interrogate>=1.7.0",
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.7",
     "llvmlite>=0.44.0",
