--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "altair>=5.5.0",
     "cytoprofiling",
     "numpy>=2.2.6",
+    "numba>=0.61.2",
     "polars>=1.31.0",
     "rich>=14.0.0",
     "scanpy>=1.11.3",
@@ -33,8 +34,10 @@ dev = [
     "ipywidgets>=8.1.7",
     "llvmlite>=0.44.0",
     "notebook>=7.4.4",
-    "numba>=0.61.2",
     "ruff>=0.12.0",
+]
+docs = [
+    "mkdocs>=1.6.1",
 ]
 
 [tool.uv.sources]
